[project]
name = "test_selenium_hierarchie"
version = "0.1.0"
description = "test to try to get hierarchie directly from the page of rostr"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "inquirer>=3.4.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "pretty-errors>=1.2.25",
    "pyinquirer>=1.0.0",
    "selenium>=4.34.2",
]

[project.urls]
repository = "https://github.disney.com/DLP-WFI-Etudes-Optimisation/test-selenium-hierarchie"

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests/"]
markers = [
    "app: Application related tests.",
    "ml: Machine Learning related tests.",
    "data: Data related tests."
]

[tool.black]
line-length = 200

[tool.ruff]
line-length = 200
include = ["*.py", "**/pyproject.toml"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E501", # line too long, handled by black
]
select = ["E", "F", "W", "C", "B", "I001"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv"
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 200

[tool.ty.rules]
index-out-of-bounds = "ignore"
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-unbound-attribute = "error"
possibly-unbound-import = "error"
